Update home and account controllers, update home layout, add second layout, update home and account index views.

--- a/Bakery/Views/Home/Index.cshtml
+++ b/Bakery/Views/Home/Index.cshtml
@@ -1,1 +1,10 @@
-<button>@Html.ActionLink("Create an account", "Index", "Account")</button>
+@{
+  Layout = "_LayoutHome";
+}
+
+@using Bakery.Models
+
+<div class="welcome">
+  <h1>Welcome To Pierre's Bakery</h1>
+  <h3>To save a list of your favorite treats, please use the links above to register and log in. Otherwise, you are welcome to enjoy a general list of what Pierre's has to offer!</h3>
+</div>
