--- a/Bakery/Views/Account/Index.cshtml
+++ b/Bakery/Views/Account/Index.cshtml
@@ -10,6 +10,7 @@
 @if (User.Identity.IsAuthenticated)
 {
   <h1>Welcome to Peirre's Bakery, @User.Identity.Name!</h1>
+  <p>You are currently logged into your account.</p>
   @using (Html.BeginForm("LogOff", "Account"))
   {
     <button type="submit" class="btn btn-default">Log Out</button>
@@ -17,9 +18,7 @@
 }
 else
 {
+  
   <button>@Html.ActionLink("Register", "Register")</button>
   <button>@Html.ActionLink("Log in", "Login")</button>
 }
-
-<button>@Html.ActionLink("Register", "Register")</button>
-<button>@Html.ActionLink("Home", "Index", "Home")</button>
