--- a/Bakery/Views/Shared/_Layout.cshtml
+++ b/Bakery/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     @* <link rel="stylesheet" href="~/css/flatly.css"> *@
     <link rel="stylesheet" href="~/css/styles.css">
 </head>
-<body class="home">
+<body>
   @* navbar created using bootstrap documentation - need JS plugin to expand collapsed navbar *@
   <nav class="navbar navbar-default">
   <div class="container-fluid">
