--- a/Bakery/wwwroot/css/styles.css
+++ b/Bakery/wwwroot/css/styles.css
@@ -17,9 +17,10 @@ body {
 
 /* BOXES */
 .welcome {
-  background: rgba(255, 255, 255, .7);
+  background: rgba(255, 255, 255, .4);
   box-shadow: 0 15px 20px rgba(0, 0, 0, .5);
-  padding: 10px;
+  padding: 20px;
+  margin-top: 50px;
 }
 
 footer {
