--- a/Bakery/Views/Account/Register.cshtml
+++ b/Bakery/Views/Account/Register.cshtml
@@ -9,6 +9,12 @@
 <hr/>
 @using (Html.BeginForm("Register", "Account", FormMethod.Post))
 {
+    @Html.LabelFor(user => user.FirstName)
+    @Html.TextBoxFor(user=> user.FirstName)
+    <br/>
+    @Html.LabelFor(user => user.LastName)
+    @Html.TextBoxFor(user=> user.LastName)
+    <br/>
     @Html.LabelFor(user => user.Email)
     @Html.TextBoxFor(user=> user.Email)
     <br/>
