Update README bugs section, update LogOff button and both Layout files.

--- a/Bakery/Views/Account/Index.cshtml
+++ b/Bakery/Views/Account/Index.cshtml
@@ -3,18 +3,16 @@
 }
 
 @using System.Security.Claims 
-
-<h2>Authentication with Identity</h2>
-<hr />
+@model Bakery.Models.ApplicationUser
 
 @if (User.Identity.IsAuthenticated)
 {
   <h1>Welcome to Peirre's Bakery, @User.Identity.Name!</h1>
   <p>You are currently logged into your account.</p>
-  @using (Html.BeginForm("LogOff", "Account"))
+  @* @using (Html.BeginForm("LogOff", "Account"))
   {
     <button type="submit" class="btn btn-default">Log Out</button>
-  }
+  } *@
 }
 else
 {
