--- a/Bakery/Views/Shared/_LayoutHome.cshtml
+++ b/Bakery/Views/Shared/_LayoutHome.cshtml
@@ -26,7 +26,10 @@
         <li><a>@Html.ActionLink("Create an account or LogIn", "Index", "Account")</a></li>
         <li><a>@Html.ActionLink("View Treats", "Index", "Treats")</a></li>
         <li><a>@Html.ActionLink("View Flavors", "Index", "Flavors")</a></li>
-        <li><a>@Html.ActionLink("Your Treats", "Details", "Treats")</a></li>
+        @if(User.Identity.IsAuthenticated)
+        {
+          <li><a>@Html.ActionLink("Your Treats", "Details", "Treats")</a></li>
+        }
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
