--- a/Bakery/Views/Shared/_Layout.cshtml
+++ b/Bakery/Views/Shared/_Layout.cshtml
@@ -28,9 +28,11 @@
         <li><a>@Html.ActionLink("View Flavors", "Index", "Flavors")</a></li>
         @if(User.Identity.IsAuthenticated)
         {
-          <li><a>@Html.ActionLink("Your Treats", "Details", "Treats")</a></li>
+          <li><a>@Html.ActionLink("Add Treats", "Create", "Treats")</a></li>
+          <li><a>@Html.ActionLink("Add Flavors", "Create", "Flavors")</a></li>
         }
       </ul>
+    
       @if(User.Identity.IsAuthenticated)
       {
         @using (Html.BeginForm("LogOff", "Account"))
