--- a/Bakery/wwwroot/css/styles.css
+++ b/Bakery/wwwroot/css/styles.css
@@ -5,8 +5,6 @@ body {
   box-sizing: border-box;
 }
 
-
-
 /* BACKGROUNDS */
 
 .home {
@@ -15,12 +13,30 @@ body {
   background-repeat: no-repeat;
 }
 
+.logged-in {
+  background-color: #B18182;
+}
+
 /* BOXES */
 .welcome {
   background: rgba(255, 255, 255, .4);
   box-shadow: 0 15px 20px rgba(0, 0, 0, .5);
   padding: 20px;
   margin-top: 50px;
+}
+
+.form {
+  width: 60%;
+  margin: 20px auto;
+}
+
+.treats-box {
+  background: rgba(255, 255, 255, .4);
+  box-shadow: 0 15px 20px rgba(0, 0, 0, .5);
+  width: 50%;
+  padding: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 footer {
@@ -48,4 +64,12 @@ footer {
 .author-cred {
   margin-top: 30px;
   color: #a9a9a9;
+}
+
+.treats-list {
+  font-size: 1.5em;
+  list-style-type: none;
+  padding-right: 40px;
+  margin-top: 20px;
+  color: #000;
 }
