--- a/Bakery/wwwroot/css/styles.css
+++ b/Bakery/wwwroot/css/styles.css
@@ -30,7 +30,7 @@ body {
   margin: 20px auto;
 }
 
-.treats-box {
+.treats-box, .flavors-box {
   background: rgba(255, 255, 255, .4);
   box-shadow: 0 15px 20px rgba(0, 0, 0, .5);
   width: 50%;
