Attempt to create Edit routes and views.

--- a/Bakery/Views/Account/Index.cshtml
+++ b/Bakery/Views/Account/Index.cshtml
@@ -17,6 +17,6 @@
 else
 {
   
-  <button>@Html.ActionLink("Register", "Register")</button>
-  <button>@Html.ActionLink("Log in", "Login")</button>
+  <button class="btn btn-default">@Html.ActionLink("Register", "Register")</button>
+  <button class="btn btn-default">@Html.ActionLink("Log in", "Login")</button>
 }
