--- a/Bakery/wwwroot/css/styles.css
+++ b/Bakery/wwwroot/css/styles.css
@@ -66,7 +66,7 @@ footer {
   color: #a9a9a9;
 }
 
-.treats-list {
+.treats-list, .flavors-list {
   font-size: 1.5em;
   list-style-type: none;
   padding-right: 40px;
