--- a/Bakery/Views/Flavors/Create.cshtml
+++ b/Bakery/Views/Flavors/Create.cshtml
@@ -15,6 +15,6 @@
     @Html.TextBoxFor(model => model.Type, new { @class="form-control"})
     <hr/> 
     
-    <button type="submit" class="btn btn-default">Add Treat</button>
+    <button type="submit" class="btn btn-default">Add Flavor</button>
   }
 </div>
