Add delete routes to flavorcontrollers, update flavor details view, add delete view.

--- a/Bakery/Views/Flavors/Details.cshtml
+++ b/Bakery/Views/Flavors/Details.cshtml
@@ -31,4 +31,5 @@
     <button class="btn btn-default">@Html.ActionLink("Add more Treats", "AddTreat", new { id = Model.FlavorId})</button>
     
   }
+  <button class="btn btn-default">@Html.ActionLink("Delete this Record", "Delete", new { id = Model.FlavorId })</button>
 </div>
