--- a/Bakery/Views/Shared/_Layout.cshtml
+++ b/Bakery/Views/Shared/_Layout.cshtml
@@ -24,13 +24,18 @@
       <ul class="nav navbar-nav">
         <li class="active"><a>@Html.ActionLink("Home", "Index", "Home")</a></li>
         <li><a>@Html.ActionLink("Create an account or LogIn", "Index", "Account")</a></li>
-        <li><a>@Html.ActionLink("View Treats", "Index", "Treats")</a></li>
-        <li><a>@Html.ActionLink("View Flavors", "Index", "Flavors")</a></li>
         @if(User.Identity.IsAuthenticated)
-        {
-          <li><a>@Html.ActionLink("Add Treats", "Create", "Treats")</a></li>
-          <li><a>@Html.ActionLink("Add Flavors", "Create", "Flavors")</a></li>
-        }
+          {
+            <li><a>@Html.ActionLink("View Treats", "Index", "Treats")</a></li>
+            <li><a>@Html.ActionLink("Add Treats", "Create", "Treats")</a></li>
+            <li><a>@Html.ActionLink("View Flavors", "Index", "Flavors")</a></li>
+            <li><a>@Html.ActionLink("Add Flavors", "Create", "Flavors")</a></li>
+          }
+          else
+          {
+            <li><a>@Html.ActionLink("View Treats", "Index", "Treats")</a></li>
+            <li><a>@Html.ActionLink("View Flavors", "Index", "Flavors")</a></li>
+          }
       </ul>
     
       @if(User.Identity.IsAuthenticated)
