Add deleteflavor route to to treatscontroller, add delete form to treats details view.

--- a/Bakery/Views/Flavors/Details.cshtml
+++ b/Bakery/Views/Flavors/Details.cshtml
@@ -32,4 +32,5 @@
     
   }
   <button class="btn btn-default">@Html.ActionLink("Delete this Record", "Delete", new { id = Model.FlavorId })</button>
+  <button class="btn btn-default">@Html.ActionLink("Back to List", "Index")</button>
 </div>
