Add remaining controller routes for treats and flavors, update views, change location of buttons.

--- a/Bakery/Views/Flavors/Delete.cshtml
+++ b/Bakery/Views/Flavors/Delete.cshtml
@@ -12,6 +12,7 @@
 <div class="form">
   @using (Html.BeginForm())
   {
+    <button class="btn btn-warning">@Html.ActionLink("Cancel", "Index")</button>
     <button type="submit" class="btn btn-warning">Delete</button>
   }
 </div>
