Add splash page with view of all treats and flavors, add routes and views for page.

--- a/Bakery/Views/Home/Index.cshtml
+++ b/Bakery/Views/Home/Index.cshtml
@@ -2,7 +2,8 @@
   Layout = "_LayoutHome";
 }
 
-@using Bakery.Models
+@using Bakery.Models;
+@model List<Bakery.Models.Treat>;
 
 <div class="welcome">
   <h1>Welcome To Pierre's Bakery</h1>
