--- a/Bakery/wwwroot/css/styles.css
+++ b/Bakery/wwwroot/css/styles.css
@@ -49,6 +49,15 @@ body {
   margin-right: auto;
 }
 
+.splash {
+  background: rgba(255, 255, 255, .4);
+  box-shadow: 0 15px 20px rgba(0, 0, 0, .5);
+  width: 50%;
+  padding: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 footer {
   position: fixed;
   right: 0;
@@ -82,6 +91,10 @@ footer {
   padding-right: 40px;
   margin-top: 20px;
   color: #000;
+}
+
+.header-list {
+  text-decoration: underline;
 }
 
 .fancy {
